--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.4.2",
+    "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   }
