--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.7",
-    "less": "^3.10.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "sass": "^1.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,7 +41,8 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
     "css-loader": "^3.4.2",
-    "less-loader": "^5.0.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3"
   }
 }
